# fastapiPro

./: README.md  alembic.ini  demo.py  pyproject.toml
alembic/: env.py
alembic/versions/: 451c4695c0da_init.py  484da3c9a31d_add_user_fields.py  74ec08fd6b8e_add_file__foreign_key_for_users.py  8432af093d30_modify_created_at.py  a4a79d3e8b7f_init.py  ac2fba4fac9d_add_file_url.py  b8a50251b8c4_add_file_url.py  d953cf55591a_init.py  f943dd5ade4a_re.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: api.py  auth.py  files.py  items.py  ollama.py  users.py
app/core/: database.py  exceptions.py  middleware.py  security.py
app/demo/: demo.py  demo0.py  demo1.py  demo2.py  demo4.py  demo5.py  demo6.py
app/models/: files.py  users.py
app/repository/: files.py  users.py
app/schemas/: exceptions.py  index.py  users.py
app/services/: files.py  users.py
app/test/: demo3.py  demo7.py
app/utils/: tools.py
